minikube_nginx_grpc/ingress_1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grpcbin
  annotations:
  #  kubernetes.io/ingress.class: "nginx"
    # If TLS is enabled for the ingress,
    # controller redirects HTTP clients to the HTTPS port 443
    # using a 308 Permanent Redirect response. It's true by default.
  #  nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grpcbin
            port:
              name: insecure
