minikube_nginx_grpc/ingress_4.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grpcbin
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  rules:
  - host: myexample.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grpcbin
            port:
              name: insecure
  tls:
  - secretName: tls-secret
    hosts:
      - myexample.com
